# PortableCppFS

./: CMakeLists.txt  Filesystem.h  README.md  detect_fs.cmake  detect_fs.cpp
